src/test/ui/issues/issue-39559.stderr
error[E0599]: no function or associated item named `dim` found for type parameter `D` in the current scope
  --> $DIR/issue-39559.rs:14:21
   |
LL |     entries: [T; D::dim()],
   |                     ^^^ function or associated item not found in `D`
   |
   = help: items from traits can only be used if the type parameter is bounded by the trait
help: the following trait defines an item `dim`, perhaps you need to restrict type parameter `D` with it:
   |
LL | pub struct Vector<T, D: Dim + Dim> {
   |                      ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
